--- a/Trasa/docker-compose.yml
+++ b/Trasa/docker-compose.yml
@@ -5,14 +5,16 @@ services:
             - '5432:5432'
         container_name: db
         environment:
-            - POSTGRES_PASSWORD=trasauser
+            - POSTGRES_PASSWORD=dbpasswordgoeshere
             - POSTGRES_USER=trasauser
             - POSTGRES_DB=trasadb
-        image: 'postgres'
+        restart: always
+        image: 'postgres:13'
     redis:
         ports:
             - '6379:6379'
         container_name: redis
+        restart: always
         image: 'redis:6.0.8'
     guacd:
         container_name: guacd
@@ -20,18 +22,20 @@ services:
             - '127.0.0.1:4822:4822'
         volumes:
             - '/tmp/trasa/accessproxy/guac:/tmp/trasa/accessproxy/guac'
-        image: 'seknox/guacd'
+        restart: always
+        image: 'seknox/guacd:v0.1.1'
     trasa:
-        links:
-            - 'db:db'
-            - 'guacd:guacd'
-            - 'redis:redis'
         ports:
             - '443:443'
             - '80:80'
             - '8022:8022'
         environment:
-            - TRASA.LISTENADDR=app.trasa
+            - database.dbpass=dbpasswordgoeshere
+            - database.dbpass=trasauser
+            - DATABASE.DBNAME=trasadb
+            - TRASA.LISTENADDR=ipgoeshere
+            - TRASA.AUTOCERT=false
         volumes:
             - '/tmp/trasa/accessproxy/guac:/tmp/trasa/accessproxy/guac'
-        image: 'seknox/trasa'
+        restart: always
+        image: 'seknox/trasa:v1.1.4'
